k8s/presentation-layer-api/presentation-layer-api-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '9'
  name: presentation-layer-api
  generation: 38
  namespace: mobile-apps
  labels:
    app: presentation-layer-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: presentation-layer-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: presentation-layer-api
        app.kubernetes.io/instance: presentation-layer-api
        version: 1.58.0
      annotations:
        sidecar.istio.io/bootstrapOverride: envoy-custom-bootstrap-config
        sidecar.istio.io/proxyMemoryLimit: 512Mi
        prometheus.io/port: '8080'
        prometheus.io/path: /actuator/prometheus
        sidecar.istio.io/proxyCPU: 1500m
        sidecar.istio.io/proxyMemory: 512Mi
        prometheus.io/scrape: 'true'
        logCollectorSystemLabel: mobile
    spec:
      restartPolicy: Always
      serviceAccountName: default
      schedulerName: default-scheduler
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/app
                    operator: Exists
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - presentation-layer-api
                topologyKey: datacenter
      terminationGracePeriodSeconds: 30
      dnsConfig:
        options:
          - name: ndots
            value: '2'
      securityContext:
        runAsUser: 100000
        runAsGroup: 200000
        fsGroup: 300000
      containers:
        - resources:
            limits:
              memory: 4Gi
            requests:
              cpu: 2050m
              memory: 4Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - '-c'
                  - sleep 5
          name: presentation-layer-api
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: custom-bootstrap-volume
              mountPath: /etc/istio/custom-bootstrap
            - name: logback
              mountPath: /var/run
            - name: cacerts
              mountPath: /var/run/secrets/java.io
            - name: tmpfs
              mountPath: /tmp
          terminationMessagePolicy: File
          image: 'eco.binary.bank.ru/presentation-layer-api:1.58.0'
      serviceAccount: default
      volumes:
        - name: logback
          configMap:
            name: logback-config-2.0.15
            defaultMode: 420
        - name: custom-bootstrap-volume
          configMap:
            name: envoy-custom-bootstrap-config
            defaultMode: 420
        - name: cacerts
          secret:
            secretName: cacerts
            defaultMode: 420
        - name: tmpfs
          emptyDir: {}
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
