k8s/presentation-layer-api/presentation-layer-api-destinationrule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  generation: 1
  name: presentation-layer-api
  namespace: mobile-apps
spec:
  host: presentation-layer-api.mobile-apps.svc.cluster.local
  subsets:
    - labels:
        app.kubernetes.io/instance: presentation-layer-api
      name: default
